--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -110,3 +110,21 @@ justwords2-android-application = { id = "justwords2.android.application", versio
 justwords2-android-application-compose = { id = "justwords2.android.application.compose", version = "unspecified" }
 justwords2-android-library = { id = "justwords2.android.library", version = "unspecified" }
 justwords2-android-library-compose = { id = "justwords2.android.library.compose", version = "unspecified" }
+justwords2-android-feature-ui = { id = "justwords2.android.feature.ui", version = "unspecified" }
+
+[bundles]
+compose = [
+    "androidx-activity-compose",
+    "androidx-lifecycle-runtime-compose",
+    "androidx-lifecycle-viewmodel-compose",
+    "androidx-compose-material3",
+    "androidx-compose-ui",
+    "androidx-compose-ui-graphics",
+    "androidx-compose-ui-tooling-preview"
+]
+compose-debug = [
+    "androidx-compose-ui-tooling",
+    "androidx-compose-ui-test-manifest"
+]
+koin = ["koin-core", "koin-android", "koin-android-workmanager"]
+koin-compose = ["koin-core", "koin-android", "koin-android-workmanager", "koin-androidx-compose"]
